--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Me",
-  "name": "Photo of Author(Me)",
+  "name": "Photo of Author(Ernestas Paznekas)",
   "icons": [
     {
       "src": "favicon.ico",
