--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.3.0",
   "private": true,
   "dependencies": {
+    "material-ui": "^1.0.0-beta.20",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-google-maps": "^9.0.1",
